src/main/events/objects/EventRegistration__c/EventRegistration__c.object-meta.xml
<CustomObject>
    <description>An individual&apos;s registration record for an Event</description>
    <label>Event Registration</label>
    <nameField>
        <displayFormat>REG-{YYYY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Event Registration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>