src/main/events/objects/EventRegistration__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>