src/main/events/objects/EventRegistration__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>