src/main/events/objects/EventRegistration__c/fields/IsNoShow__c.field-meta.xml
<CustomField>
    <fullName>IsNoShow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Show</label>
    <type>Checkbox</type>
</CustomField>