src/main/events/objects/EventRegistration__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <complianceGroup>PII;GDPR;CCPA</complianceGroup>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>